# parking-os-backend

./: .env.sample  .gitignore  Cargo.toml
config/: endpoints.yaml
docs/: endpoints.yaml
mongo-script/: Dockerfile  load_data_mongodb.py  requirements.txt
src/: main.rs  users.rs  utils.rs
src/db/: common.rs  mod.rs  parking_lot.rs  parking_space.rs  tariff.rs  ticket.rs  user.rs  vehicle.rs
src/handlers/: common.rs  mod.rs  parking_lot.rs  parking_space.rs  sample.rs  tariff.rs  ticket.rs  users.rs  vehicle.rs
src/handlers/admin/: mod.rs  parking_lot.rs  users.rs
src/structs/: common.rs  db.rs  error.rs  mod.rs  model.rs  query.rs  response.rs  sample.rs  schema.rs  users.rs
src/utils/: jwt.rs
