[package]
name = "parking-os-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.0", features = ["full"] }
axum = "0.7.2"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tower = { version = "0.4.13", features = ["util", "timeout"] }
tower-http = { version = "0.5.0", features = ["add-extension", "trace"] }
serde_json = "1.0.108"
serde = { version = "1.0.193", features = ["derive"]}

[dependencies.mongodb]
version = "2.8.0"
default-features = false
features = ["async-std-runtime"]