[package]
name = "parking-os-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.2"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.35.0", features = ["full"] }
tower-http = { version = "0.5.0", features = ["trace", "set-header", "timeout", "limit"]}
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"]}
bson = { version = "2.8.1", features = ["chrono-0_4"] }
mongodb = { version = "2.8.0", features = ["zstd-compression", "snappy-compression", "zlib-compression"]}
chrono = "0.4.31"
futures = "0.3.29"
dotenv = "0.15.0"
serde_with = "3.4.0"
mime = "0.3.17"
http-body-util = "0.1.0"

[dev-dependencies]
tower = { version = "0.4.13", features = ["util"] }